# Baremetal-Embedded-Project-CMAKE-MAKE-

STM32F401 RGB_Animation CMAKE/: Build.bat  CMakeLists.txt  Clean.bat  Erase.bat  Flash.bat
STM32F401 RGB_Animation CMAKE/Src/: main.c
STM32F401 RGB_Animation CMAKE/Startup/: startup_stm32f401ccu6.c
STM32F401 RGB_Animation MakeFile/: Build.bat  Clean.bat  Erase.bat  Flash.bat  MakeFile
STM32F401 RGB_Animation MakeFile/Src/: main.c
STM32F401 RGB_Animation MakeFile/Startup/: startup_stm32f401ccu6.c
